[project]
name = "airflow-learning"
version = "0.1.0"
description = "Apache Airflow learning project — data engineering series"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Install locally for IDE support and running tests outside Docker
dev = [
    "apache-airflow[postgres,http]==2.10.3",
    "apache-airflow-providers-common-sql==1.14.2",
    "apache-airflow-providers-http==4.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
